oncokb/oncokb-msk/ingress/ingress_oncokb.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oncokb-ingress
spec:
  tls:
    - hosts:
        - www.oncokb.dev.aws.mskcc.org
        - oncokb.dev.aws.mskcc.org
        - grafana.oncokb.dev.aws.mskcc.org
        - beta.core.oncokb.dev.aws.mskcc.org
        - gn.oncokb.dev.aws.mskcc.org
  rules:
    - host: "www.oncokb.dev.aws.mskcc.org"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: oncokb-test
                port:
                  number: 80
    - host: "oncokb.dev.aws.mskcc.org"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: oncokb-test
                port:
                  number: 80
    - host: "beta.core.oncokb.dev.aws.mskcc.org"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: oncokb-core-beta-cluster
                port:
                  number: 8888
    - host: "gn.oncokb.dev.aws.mskcc.org"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: genome-nexus-cached
                port:
                  number: 8888
    - host: "grafana.oncokb.dev.aws.mskcc.org"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: oncokb-grafana
                port:
                  number: 80
  ingressClassName: nginx
